--- a/rtl/wasi/Makefile.fpc
+++ b/rtl/wasi/Makefile.fpc
@@ -5,7 +5,7 @@
 main=rtl
 [target]
 loaders=
-units=$(SYSTEMUNIT) $(SYSINIT_UNITS) objpas $(EXTPASUNIT) $(MACPASUNIT) $(ISO7185UNIT) uuchar \
+units=$(SYSTEMUNIT) $(SYSINIT_UNITS) $(OBJPASUNIT) $(EXTPASUNIT) $(MACPASUNIT) $(ISO7185UNIT) uuchar \
       $(WASIAPIUNIT) $(CTYPESUNIT) $(STRINGSUNIT) $(SYSCONSTUNIT)  $(SYSUTILSUNIT) \
       $(SORTBASEUNIT) $(MATHUNIT) $(RTLCONSTSUNIT) $(TYPESUNIT)  $(TYPINFOUNIT)  $(FGLUNIT) $(GETOPTSUNIT) \
       $(CHARSETUNIT)  $(CPALLUNIT) $(CHARACTERUNIT) $(FPWIDESTRINGUNIT)  \
@@ -83,7 +83,7 @@ si_dll$(PPUEXT) : si_dll.pp $(SYSTEMUNIT)$(PPUEXT)
 # Other $(SYSTEMUNIT)-dependent RTL Units
 #
 
-WEBASSEMBLYDEPS=$(PROCINC)/webassembly.pp $(SYSTEMUNIT)$(PPUEXT) $(PROCINC)/cpuh.inc $(PROCINC)/cpuinnr.inc objpas$(PPUEXT)
+WEBASSEMBLYDEPS=$(PROCINC)/webassembly.pp $(SYSTEMUNIT)$(PPUEXT) $(PROCINC)/cpuh.inc $(PROCINC)/cpuinnr.inc $(OBJPASUNIT)$(PPUEXT)
 
 webassembly$(PPUEXT) : $(WEBASSEMBLYDEPS)
         $(COMPILER) $<
@@ -107,7 +107,7 @@ WASIApi.WASIApi$(PPUEXT) : $(NSOSDIR)/WASIApi.WASIApi.pp $(WASIAPIDEPS)
 # wasiutils
 #
 
-WASIUTILDEPS=$(WASIAPIUNIT)$(PPUEXT) objpas$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT)
+WASIUTILDEPS=$(WASIAPIUNIT)$(PPUEXT) $(OBJPASUNIT)$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT)
 
 wasiutil$(PPUEXT) : wasiutil.pp $(WASIUTILDEPS)
         $(COMPILER) $<
