--- a/rtl/symbian/Makefile.fpc
+++ b/rtl/symbian/Makefile.fpc
@@ -8,7 +8,7 @@ main=rtl
 [target]
 # $(MACPASUNIT) and $(ISO7185UNIT) units rely on sysutils unit, not yet handled here
 # $(EXTPASUNIT) unit relies on dos unit, not yet handled
-units=$(SYSTEMUNIT) $(ISO7185UNIT) $(EXTPASUNIT) uuchar objpas $(MACPASUNIT) \
+units=$(SYSTEMUNIT) $(ISO7185UNIT) $(EXTPASUNIT) uuchar $(OBJPASUNIT) $(MACPASUNIT) \
       $(SYSCONSTUNIT) $(SYSUTILSUNIT) $(MATHUNIT) $(RTLCONSTSUNIT) \
       $(CHARACTERUNIT) $(FPWIDESTRINGUNIT) $(FGLUNIT) $(CPU_UNITS) \
       $(DOSUNIT) $(TYPEINFOUNIT) $(TYPESUNIT) $(SORTBASEUNIT) $(CLASSESUNIT) buildrtl
@@ -53,9 +53,9 @@ CPU_UNITS=cpu
 endif
 
 ifneq ($(findstring $(ARCH),i386),)
-CPU_DEPS_CPU=$(SYSUTILSUNIT)$(PPUEXT) objpas$(PPUEXT)
+CPU_DEPS_CPU=$(SYSUTILSUNIT)$(PPUEXT) $(OBJPASUNIT)$(PPUEXT)
 else
-CPU_DEPS_CPU=$(SYSUTILSUNIT)$(PPUEXT) objpas$(PPUEXT)
+CPU_DEPS_CPU=$(SYSUTILSUNIT)$(PPUEXT) $(OBJPASUNIT)$(PPUEXT)
 endif
 DOS_DEPS_OS=objpas$(PPUEXT)
 
@@ -82,6 +82,6 @@ SYSDEPS=$(SYSINCDEPS) $(SYSCPUDEPS)
 # System Units (System, Objpas, Strings)
 #
 
-buildrtl$(PPUEXT): buildrtl.pp system$(PPUEXT) objpas$(PPUEXT) # $(MACPASUNIT)$(PPUEXT)
+buildrtl$(PPUEXT): buildrtl.pp system$(PPUEXT) $(OBJPASUNIT)$(PPUEXT) # $(MACPASUNIT)$(PPUEXT)
         $(COMPILER) -Fi$(OBJPASDIR)/sysutils -Fi$(OBJPASDIR)/classes -Fu$(PROCINC) -I$(OBJPASDIR) -I$(INC) -I$(SYMBIANINC) -I$(UIQINC) -Fu$(INC) -Fu$(OBJPASDIR) buildrtl
 
