--- a/rtl/aros/Makefile.fpc
+++ b/rtl/aros/Makefile.fpc
@@ -7,7 +7,7 @@ main=rtl
 
 [target]
 loaders=$(LOADERS)
-units=$(SYSTEMUNIT) heaptrc uuchar $(OBJPASUNIT) $(ISO7185UNIT) $(EXTPASUNIT) buildrtl $(CPALLUNIT)
+units=$(SYSTEMUNIT) heaptrc $(UUCHARUNIT) $(OBJPASUNIT) $(ISO7185UNIT) $(EXTPASUNIT) buildrtl $(CPALLUNIT)
 implicitunits=$(SYSINITUNITS) athreads $(FPINTRESUNIT) $(DOSUNIT) \
       $(CTYPESUNIT)  $(STRINGSUNIT) $(RTLCONSTSUNIT) $(SYSCONSTUNIT) $(TYPESUNIT) \
       $(FPWIDESTRINGUNIT) $(CHARACTERUNIT) \
