--- a/rtl/macos/Makefile.fpc
+++ b/rtl/macos/Makefile.fpc
@@ -7,7 +7,7 @@ main=rtl
 
 [target]
 loaders=
-units=$(SYSTEMUNIT) uuchar $(STRINGSUNIT)  $(MACPASUNIT) $(OBJPASUNIT) $(ISO7185UNIT) $(MACOSTPUNIT) $(MACUTILSUNIT) $(EXTPASUNIT) \
+units=$(SYSTEMUNIT) $(UUCHARUNIT) $(STRINGSUNIT)  $(MACPASUNIT) $(OBJPASUNIT) $(ISO7185UNIT) $(MACOSTPUNIT) $(MACUTILSUNIT) $(EXTPASUNIT) \
       $(HEAPTRCUNIT) $(GETOPTSUNIT) \
       $(UNIXUTILUNIT)  $(DOSUNIT)  $(CMEMUNIT) $(CHARSETUNIT) $(CPALLUNIT)  $(CTYPESUNIT) $(SYSCONSTUNIT) \
       $(SORTBASEUNIT)  $(SYSUTILSUNIT) $(CLASSESUNIT) $(TYPINFOUNIT) $(FGLUNIT) $(TYPESUNIT) \
