--- a/rtl/palmos/Makefile.fpc
+++ b/rtl/palmos/Makefile.fpc
@@ -7,12 +7,12 @@ main=rtl
 
 [target]
 loaders= prt0
-units=$(SYSTEMUNIT) si_prc uuchar objpas $(ISO7185UNIT) strings \
+units=$(SYSTEMUNIT) si_prc $(UUCHARUNIT) objpas $(ISO7185UNIT) strings \
        ctypes \
        charset cpall \
        sysconst \
        systraps pilot
-#units=$(SYSTEMUNIT) uuchar ctypes objpas $(MACPASUNIT) $(ISO7185UNIT) $(EXTPASUNIT) strings \
+#units=$(SYSTEMUNIT) $(UUCHARUNIT) ctypes objpas $(MACPASUNIT) $(ISO7185UNIT) $(EXTPASUNIT) strings \
 #      lnfodwrf lineinfo heaptrc \
 #      windows messages dynlibs \
 #      dos objects \
