--- a/rtl/java/Makefile.fpc
+++ b/rtl/java/Makefile.fpc
@@ -7,7 +7,7 @@ main=rtl
 
 [target]
 loaders=
-units=$(SYSTEMUNIT) uuchar $(OBJPASUNIT) jdk15
+units=$(SYSTEMUNIT) $(UUCHARUNIT) $(OBJPASUNIT) jdk15
 
 [require]
 nortl=y
