--- a/rtl/qnx/Makefile.fpc
+++ b/rtl/qnx/Makefile.fpc
@@ -7,7 +7,7 @@ main=rtl
 
 [target]
 loaders=cprt0 crti crtn
-units=system uuchar dos $(OBJPASUNIT) objects strings \
+units=system $(UUCHARUNIT) dos $(OBJPASUNIT) objects strings \
       sysutils typinfo math \
       cpu mmx getopts heaptrc lineinfo posix
 rsts=math typinfo
